@@ -13,6 +13,7 @@
 * Added filter to render_block and pre_render_block.
 * Added the groups_post_access_filter_render_block filter.
 * Added the groups_post_access_filter_pre_render_block filter.
+* Added the groups_post_access_filter_block_core_navigation_render_inner_blocks filter.
 * Fixed a PHP Deprecated notice on version_compare() when Groups is newly installed (PHP 8.x compatibility).
 * Revised post count caching.
 
